syntax = "proto3";

package main;

service IncidentService {
  rpc CreateIncident(CreateIncidentRequest) returns (IncidentResponse);
  rpc GetIncident(GetIncidentRequest) returns (IncidentResponse);
  rpc UpdateIncident(UpdateIncidentRequest) returns (IncidentResponse);
  rpc DeleteIncident(DeleteIncidentRequest) returns (DeleteIncidentResponse);
}

message IncidentProto {
  string incident_id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string creation_date = 5;
}

message CreateIncidentRequest {
  string title = 1;
  string description = 2;
  string status = 3;
  string creation_date = 4;
}

message GetIncidentRequest {
  string incident_id = 1;
}

message UpdateIncidentRequest {
  string incident_id = 1;
  string status = 2;
}

message DeleteIncidentRequest {
  string incident_id = 1;
}

message IncidentResponse {
  IncidentProto incident = 1;
}

message DeleteIncidentResponse {
  bool success = 1;
}
